--- a/src/App/templates/template.tex
+++ b/src/App/templates/template.tex
@@ -26,7 +26,7 @@
 
   \begin{tikzpicture}[remember picture, overlay]
   \node[opacity=0.07,inner sep=0pt] at (current page.center)
-  {\includegraphics[width=0.8\paperwidth]{src/templates/fii_2.pdf}};
+  {\includegraphics[width=0.8\paperwidth]{App/templates/fii_2.pdf}};
   \end{tikzpicture}
 
   \opening{\ }
