--- a/src/DB/templates/template.tex
+++ b/src/DB/templates/template.tex
@@ -15,25 +15,23 @@
 \newcommand{\stdlohn}[0]{11 \euro}
 \setlength\parindent{0pt}
 
-\renewcommand*{\raggedsignature}{\raggedright}
+%\renewcommand{\raggedsignature}{\raggedright}
  \renewcommand{\familydefault}{\sfdefault}
 
 \begin{document}
 
-  \begin{letter}{
 \large{FYYSIKKOKILTA~RY~--~Kulukorvauslomake} \\
 
   	Nimi: \VAR{nimi} \\
   	IBAN: \VAR{iban} \\ \ \\
   	Maksun peruste: \VAR{peruste} \\
-  }
 
-  %\begin{tikzpicture}[remember picture, overlay]
-  %\node[opacity=0.07,inner sep=0pt] at (current page.center)
-  %{\includegraphics[width=0.8\paperwidth]{DB/templates/fii_2.pdf}};
-  %\end{tikzpicture}
+  \begin{tikzpicture}[remember picture, overlay]
+  \node[opacity=0.07,inner sep=0pt] at (current page.center)
+  {\includegraphics[width=0.8\paperwidth]{DB/templates/fii_2.pdf}};
+  \end{tikzpicture}
 
-  \opening{\ }
+  %\opening{\ }
 
   \begin{longtable}{p{9.5cm}p{1.5cm}p{2.5cm}}
   	Kuvaus & Liite & Summa \\
@@ -50,14 +48,14 @@
   \end{longtable}
 
   Hyväksytty raadin kokouksessa
-  %w% if hyvaksytty
+  %% if hyvaksytty
   Kyllä
-  %w% else
+  %% else
   Ei
-  %w% endif
+  %% endif
 
 
-  \end{letter}
+  %\end{letter}
 
   \newpage
 
