--- a/src/DB/templates/template.tex
+++ b/src/DB/templates/template.tex
@@ -25,7 +25,8 @@
 \large{FYYSIKKOKILTA~RY~--~Kulukorvauslomake} \\
 
   	Nimi: \VAR{nimi} \\
-  	IBAN: \VAR{iban} \\ \ \\
+  	IBAN: \VAR{iban} \\
+    Pvm:  \VAR{pvm}  \\ \ \\
   	Maksun peruste: \VAR{peruste} \\
 
   \begin{tikzpicture}[remember picture, overlay]
