--- a/src/DB/templates/template.tex
+++ b/src/DB/templates/template.tex
@@ -50,7 +50,7 @@
 
   \end{longtable}
 
-  Hyväksytty raadin kokouksessa \VAR{kokous}
+  Hyväksytty raadin kokouksessa \VAR{kokous} \\
   Maksettu päivämäärällä \VAR{maksupvm}
 
 
